# CW1

./: Book.cpp  Book.h  BookRoom.cpp  BookRoom.h  CMakeLists.txt  Date.cpp  Date.h  LibrarySpace.cpp  LibrarySpace.h  Novel.cpp  Novel.h  Person.cpp  Person.h  ProfessionalBook.cpp  ProfessionalBook.h  ReadingRoom.cpp  ReadingRoom.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
