cmake_minimum_required(VERSION 3.10)
project(CW1)

set(CMAKE_CXX_STANDARD 20)

add_executable(CW1
        Book.cpp
        Book.h
        BookRoom.cpp
        BookRoom.h
        Date.cpp
        Date.h
        LibrarySpace.cpp
        LibrarySpace.h
        main.cpp
        Novel.cpp
        Novel.h
        Person.cpp
        Person.h
        ProfessionalBook.cpp
        ProfessionalBook.h
        ReadingRoom.cpp
        ReadingRoom.h
        Student.cpp
        Student.h
        Teacher.cpp
        Teacher.h
)